# email_assistant

./: .gitignore  Dockerfile  README.md  accounts.sample.json  main.py  pyproject.toml
.github/workflows/: build-deploy.yml  ci.yml
data/: stats.json
deploy/: README.md
deploy/argocd/: application.yaml
deploy/base/: configmap.yaml  cronjob.yaml  kustomization.yaml  namespace.yaml  serviceaccount.yaml
deploy/overlays/prod/: kustomization.yaml  patch-cronjob.yaml
models/: __init__.py  email_message.py  rule.py
rules/: rules.json
services/: __init__.py  auth_service.py  email_classifier.py  gmail_service.py  ml_classifier.py  persistence_service.py  sentiment_service.py  statistics_service.py
services/strategies/: __init__.py  base.py  ml_strategy.py  rule_based.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_email_classifier.py  test_processed_store.py  test_rules_engine.py
utils/: __init__.py  config.py  logger.py  rules_engine.py
